# 2DGrasping_Discovery_GUI

./: .gitignore  .gitlab-ci-amd64.yml  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  Dockerfile.GUI  Dockerfile.buildDEB  LICENSE  README.md  docker-compose.yml  package.xml  sign.cmd
cmake/: package_debian.cmake
debian/: config.in  postinst.in  postrm.in  templates.in
rcdiscover/: CMakeLists.txt  discover.cc  force_perm_ip.cc  force_perm_ip.h  socket_windows.cc
schunkdiscover/: CMakeLists.txt  deviceinfo.cc  deviceinfo.h  discover.cc  discover.h  force_ip.cc  force_ip.h  force_perm_ip.cc  force_perm_ip.h  gige_request_counter.cc  gige_request_counter.h  operation_not_permitted.cc  operation_not_permitted.h  ping.cc  ping.h  socket.h  socket_exception.cc  socket_exception.h  socket_linux.cc  socket_linux.h  socket_windows.cc  socket_windows.h  utils.h  wol.cc  wol.h  wol_exception.cc  wol_exception.h
tools/: 1_Eula.html  CMakeLists.txt  rcdiscover-gui.cc  schunkdiscover-gui.cc  schunkdiscover.cc
tools/rcdiscover-gui/: about-dialog.cc  discover-frame.cc  discover-frame.h  event-ids.h  force-perm-ip-dialog.cc  force-perm-ip-dialog.h  resources.h  sensor-command-dialog.cc  sensor-command-dialog.h
tools/rcdiscover-gui/resources/: help.hhp.h  help.htm  logo_32_rotate.h
tools/schunkdiscover-cli/: cli_utils.cc  cli_utils.h  schunkdiscover_discover.cc  schunkdiscover_discover.h  schunkdiscover_force_ip.cc  schunkdiscover_force_ip.h  schunkdiscover_reconnect.cc  schunkdiscover_reconnect.h  schunkdiscover_reset.cc  schunkdiscover_reset.h
tools/schunkdiscover-gui/: about-dialog.cc  about-dialog.h  discover-frame.cc  discover-frame.h  discover-thread.cc  discover-thread.h  event-ids.cc  event-ids.h  force-ip-dialog.cc  force-ip-dialog.h  force-perm-ip-dialog.cc  force-perm-ip-dialog.h  reconnect-dialog.cc  reset-dialog.cc  reset-dialog.h  resources.cc  resources.h  sensor-command-dialog.cc  sensor-command-dialog.h
tools/schunkdiscover-gui/resources/: eula.htm  eula.htm.h  help.hhc  help.hhc.h  help.hhp  help.htm  help.htm.h  loading_spinner_32.h  loading_spinner_empty_frame_32.h  logo_128.xpm  logo_128_rotate.h  logo_32_rotate.h  logo_64_rotate.h  resources.rc  schunkdiscover-gui.desktop
